# backend

./: .dockerignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: asgi.py  dependencies.py  imports.py  worker_settings.py
app/api/v1/: logging.json  logging.py  router.py
app/api/v1/controllers/: abstract.py  connections.py  games.py  redis.py  users.py
app/api/v1/enums/: packet_class.py  packet_type.py
app/api/v1/exceptions/: already_exists_error.py  api_error.py  invalid_access_token_error.py  invalid_credentials_error.py  invalid_packet_error.py  not_found_error.py
app/api/v1/packets/: base.py  base_client.py  base_packet.py  base_server.py  connection.py  connection_manager.py
app/api/v1/routes/: abstract_packets.py  (+5 more)
app/assets/: company.py  field.py  game.py  monopoly_object.py  parameters.py  player.py  redis.py  redis_object.py  tax.py  user.py  utils.py
app/assets/actions/: action.py  buy_field.py  buy_field_on_auction.py  casino.py  contract.py  move.py  pay_chance.py  pay_prison.py  pay_rent.py  pay_tax.py  prison.py
app/assets/base/: monopoly_object.py
app/assets/controllers/: context.py  fields.py  players.py
app/assets/enums/: action_type.py  field_type.py  imprison_cause.py
app/assets/maps/: default_map.json
app/assets/monopoly/: monopoly_object.py
app/assets/objects/: field.py  game.py  monopoly_object.py  player.py  redis.py  user.py
app/assets/redis/: game.py  redis_object.py  user.py
app/cron/: update_recruitments.py  worker_settings.py
(+80 files in other folders)
